button z-index fix, everything functional

--- a/ezeatz/src/header/Header.css
+++ b/ezeatz/src/header/Header.css
@@ -19,4 +19,10 @@
 .userIcon {
   margin-left: 92vw;
   margin-top: -15vh;
+  z-index: -1;
+}
+
+.global-class-name userIcon {
+  z-index: -1;
+  border: solid black 5px;
 }
