--- a/ezeatz/src/header/NameTag.css
+++ b/ezeatz/src/header/NameTag.css
@@ -2,6 +2,7 @@
   float: right;
   margin-right: 42vw;
   margin-top: -7.5vh;
+  z-index: 1;
 }
 .filterPannel {
   float: left;
